--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,13 @@
+
 # Rename this file to .env and fill in your secrets before running locally.
 
 # Stripe secret key for verifying sessions and creating webhooks.
-STRIPE_SECRET=sk_test_XXXXXXXXXXXXXXXXXXXXXXXX
+STRIPE_SECRET=your_stripe_secret_key_here
 
 # Stripe webhook signing secret (found in your Stripe dashboard when you create the webhook endpoint).
-STRIPE_WEBHOOK_SECRET=whsec_XXXXXXXXXXXXXXXXXXXXXXXX
+STRIPE_WEBHOOK_SECRET=your_stripe_webhook_secret_here
 
-# Upstash Redis REST URL (e.g. https://us1-yours.upstash.io)
+# Upstash Redis REST URL (e.g. https://us1-yourss.upstash.io)
 UPSTASH_REDIS_REST_URL=
 
 # Upstash Redis REST token
