--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "etsyresize",
-  "version": "1.0.0",
-  "description": "Simple marketplace image resizer with payment unlock",
-  "type": "module",
-  "scripts": {
-    "start": "node server.js"
-  },
   "dependencies": {
-    "express": "^4.19.2",
-    "multer": "^1.4.5-lts.1",
-    "sharp": "^0.33.4",
-    "archiver": "^6.0.2",
-    "express-rate-limit": "^7.1.5",
-    "stripe": "^12.1.0",
-    "dotenv": "^16.4.5",
-    "@upstash/redis": "^1.31.0",
-    "body-parser": "^1.20.2"
+    "@fortawesome/fontawesome-free": "6.7.2",
+    "@fortawesome/fontawesome-svg-core": "6.7.2",
+    "@fortawesome/free-brands-svg-icons": "6.7.2",
+    "@fortawesome/free-regular-svg-icons": "6.7.2",
+    "@fortawesome/free-solid-svg-icons": "6.7.2",
+    "@types/prismjs": "1.26.5",
+    "autoprefixer": "10.4.21",
+    "http-server": "14.1.1",
+    "image-size": "2.0.2",
+    "postcss": "8.5.6",
+    "pptxgenjs": "4.0.0",
+    "prismjs": "1.30.0",
+    "sharp": "0.34.1",
+    "tailwindcss": "4.1.10",
+    "ts-node": "10.9.2",
+    "typescript": "5.8.3"
   }
 }
