--- a/package.json
+++ b/package.json
@@ -1,5 +1,17 @@
 {
+  "name": "resizedimage",
+  "version": "1.0.0",
+  "description": "Simple image resizer for marketplace presets with Pro unlock via Stripe",
+  "type": "commonjs",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
+    "express": "^4.18.2",
+    "multer": "^1.4.5",
+    "sharp": "^0.34.1",
+    "archiver": "^5.3.1",
+    "express-rate-limit": "^6.7.0",
     "@fortawesome/fontawesome-free": "6.7.2",
     "@fortawesome/fontawesome-svg-core": "6.7.2",
     "@fortawesome/free-brands-svg-icons": "6.7.2",
@@ -12,7 +24,6 @@
     "postcss": "8.5.6",
     "pptxgenjs": "4.0.0",
     "prismjs": "1.30.0",
-    "sharp": "0.34.1",
     "tailwindcss": "4.1.10",
     "ts-node": "10.9.2",
     "typescript": "5.8.3"
