--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "multer": "^1.4.5",
+    "multer": "1.4.5-lts.1",
     "sharp": "^0.34.1",
     "archiver": "^5.3.1",
     "express-rate-limit": "^6.7.0",
