--- a/package.json
+++ b/package.json
@@ -9,23 +9,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "multer": "1.4.5-lts.1",
-    "sharp": "^0.34.1",
+    "sharp": "^0.34.3",
     "archiver": "^5.3.1",
-    "express-rate-limit": "^6.7.0",
-    "@fortawesome/fontawesome-free": "6.7.2",
-    "@fortawesome/fontawesome-svg-core": "6.7.2",
-    "@fortawesome/free-brands-svg-icons": "6.7.2",
-    "@fortawesome/free-regular-svg-icons": "6.7.2",
-    "@fortawesome/free-solid-svg-icons": "6.7.2",
-    "@types/prismjs": "1.26.5",
-    "autoprefixer": "10.4.21",
-    "http-server": "14.1.1",
-    "image-size": "2.0.2",
-    "postcss": "8.5.6",
-    "pptxgenjs": "4.0.0",
-    "prismjs": "1.30.0",
-    "tailwindcss": "4.1.10",
-    "ts-node": "10.9.2",
-    "typescript": "5.8.3"
+    "express-rate-limit": "^6.7.0"
   }
 }
